--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,9 @@ body {
   display: grid;
   justify-content: center;
   align-content: center;
-  padding-top:2px;
   min-height: 100vh;
-  grid-template-columns: repeat(4, 90px);
-  grid-template-rows: minmax(120px, auto) repeat(5, 90px);
+  grid-template-columns: repeat(4, 100px);
+  grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
 .calculator-grid > button {
@@ -33,7 +32,7 @@ body {
 }
 
 .span-two {
-  grid-row: span 2;
+  grid-column: span 2;
 }
 
 .output {
@@ -43,7 +42,7 @@ body {
   align-items: flex-end;
   justify-content: space-around;
   flex-direction: column;
-  padding: 7px;
+  padding: 10px;
   word-wrap: break-word;
   word-break: break-all;
 }
